home section added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodHut</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- Header section -->
+    <section class="header">
+        <div class="logo">
+            <img src="images/food.png" alt="">
+            <h4> <span>Food</span>Hut</h4>
+        </div>
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Menu</a>
+            <a href="#">Service</a>
+
+        </div>
+        <div class="cart">
+            <a href="#">Contact</a>
+        </div>
+    </section>
+
+    <!-- Home section -->
+
+    <section class="home">
+
+        <div class="home-left">
+            <h1><span>Skip </span>The Diet, Just Eat Healthy With FoodHut</h1>
+            <p>imagine you don't need a diet because we provide <br> healthy and delicious food for you</p>
+            <a class="home-left-link" href="">Order food</a>
+        </div>
+        <div class="home-right">
+            <img src="images/food-main.png" alt="">
+        </div>
+
+    </section>
+
+    <!-- About section -->
+
+    <section class="about">
+
+    </section>
 </body>
+
 </html>
