--- a/index.html
+++ b/index.html
@@ -23,20 +23,22 @@
             <h4> <span>Food</span>Hut</h4>
         </div>
         <div class="menu">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Menu</a>
-            <a href="#">Service</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#recipie">My Recipies</a>
+            <a href="#achievement">Achievement</a>
 
         </div>
         <div class="cart">
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
         </div>
     </section>
 
+    <!-- header section End -->
+
     <!-- Home section -->
 
-    <section class="home">
+    <section class="home" id="home">
 
         <div class="home-left">
             <h1><span>Skip </span>The Diet, Just Eat Healthy With FoodHut</h1>
@@ -48,12 +50,92 @@
         </div>
 
     </section>
+    <!-- Home section End -->
 
     <!-- About section -->
 
-    <section class="about">
+    <section class="about" id="about">
+
+        <div class="about-left">
+            <img src="images/food1.png" alt="">
+        </div>
+        <div class="about-right">
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta inventore adipisci doloremque ratione
+                recusandae sit illo architecto libero. Amet veniam officia quasi eos, nam corporis, esse, iure aliquid
+                animi iste rem impedit voluptatum quidem porro labore necessitatibus quia in ex?</p>
+
+            <a class="home-left-link" href="#contact">Contact Me</a>
+        </div>
 
     </section>
+    <!-- About section End -->
+
+    <!-- Recipie section -->
+
+    <section class="recipie" id="recipie">
+
+        <div class="top">
+            <h1>My Recipies</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At amet repellendus voluptate ipsa doloremque
+                animi </p>
+        </div>
+
+        <div class="bottom">
+
+            <div class="card">
+                <img src="images/Project Cover8.png" alt="">
+                <h1 class="title">Masala Parata</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj Lorem ipsum, dolor
+                    sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj</p>
+                <h3>Price:$400</h3>
+            </div>
+            <div class="card">
+                <img src="images/Project Cover 9.jpg" alt="">
+                <h1 class="title">Mutton Kabab</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj Lorem ipsum, dolor
+                    sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj</p>
+                <h3>Price:$320</h3>
+            </div>
+            <div class="card">
+                <img src="images/Project Cover.png" alt="">
+                <h1 class="title">Thai Soup</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj Lorem ipsum, dolor
+                    sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj</p>
+                <h3>Price:$280</h3>
+            </div>
+        </div>
+
+    </section>
+    <!-- Recipie section End -->
+
+    <!-- achievement section -->
+
+     <section class="achievement" id="achievement">
+
+        <!-- <div class="count-left">
+            
+        </div> -->
+        
+         <div class="count">
+            <img class="count-left-image" src="images/food.png" alt="">
+             <div class="counting">
+                   <h1>700K</h1>
+                   <h4>Youtube Subscriber</h4>
+             </div>
+             <div class="counting">
+                <h1>1.8m</h1>
+                <h4>Instagram Followers</h4>
+             </div>
+             <div class="counting">
+                <h1>230K</h1>
+                <h4>Facebook Followers</h4>
+             </div>
+             <img class="count-right-image" src="images/food-1.png" alt="">
+         </div>
+
+     </section>
+    <!-- achievement section end -->
 </body>
 
 </html>
