FoodHut is complete

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="home-left">
             <h1><span>Skip </span>The Diet, Just Eat Healthy With FoodHut</h1>
             <p>imagine you don't need a diet because we provide <br> healthy and delicious food for you</p>
-            <a class="home-left-link" href="">Order food</a>
+            <a class="home-left-link" target="_blank" href="https://www.foodpanda.com.bd/">Order food</a>
         </div>
         <div class="home-right">
             <img src="images/food-main.png" alt="">
@@ -61,11 +61,9 @@
         </div>
         <div class="about-right">
             <h1>About Me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta inventore adipisci doloremque ratione
-                recusandae sit illo architecto libero. Amet veniam officia quasi eos, nam corporis, esse, iure aliquid
-                animi iste rem impedit voluptatum quidem porro labore necessitatibus quia in ex?</p>
+            <p>I am passionate about my business. I have a great deal of knowledge about my business.Unfortunately, chances are that your competitors are saying pretty much the same things. So why should a prospect choose you? One entrepreneur and real estate broker shares her tips for creating an ‘About Me’ page that sets you apart from the competition.</p>
 
-            <a class="home-left-link" href="#contact">Contact Me</a>
+            <a class="home-left-link" target="_blank" href="https://www.facebook.com/bestfoodpage/">Facebook Page</a>
 
             <img src="images/Project_Cover7.png" alt="">
         </div>
@@ -79,8 +77,7 @@
 
         <div class="top">
             <h1>My Recipies</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At amet repellendus voluptate ipsa doloremque
-                animi </p>
+            <p>The key to preparing those whole recipies are scoring deep cuts for quick and even cooking. All kind of tests you can feel here. </p>
         </div>
 
         <div class="bottom">
@@ -88,22 +85,19 @@
             <div class="card">
                 <img src="images/Project Cover8.png" alt="">
                 <h1 class="title">Masala Parata</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj Lorem ipsum, dolor
-                    sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj</p>
+                <p>Masala paratha recipe with step by step photos. Masala paratha is spiced unleavened whole wheat flatbreads. Masala paratha... </p>
                 <h3>Price:$400</h3>
             </div>
             <div class="card">
                 <img src="images/Project Cover 9.jpg" alt="">
                 <h1 class="title">Mutton Kabab</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj Lorem ipsum, dolor
-                    sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj</p>
+                <p>Kebabs made from minced mutton and chicken meat, slathered in a bowl of spices and grilled to perfection. Full of juice and flavor...</p>
                 <h3>Price:$320</h3>
             </div>
             <div class="card">
                 <img src="images/Project Cover.png" alt="">
                 <h1 class="title">Thai Soup</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj Lorem ipsum, dolor
-                    sit amet consectetur adipisicing elit. Ad, quam! fdff fsluiepj</p>
+                <p>Thai soups feature incredible flavors and are ultra comforting — guaranteed to lift your spirits and brighten your mood. hese kebabs are perfect as a starter...</p>
                 <h3>Price:$280</h3>
             </div>
         </div>
@@ -166,7 +160,15 @@
     <!-- contact section end -->
 
     <!-- footer section -->
-    
+    <section class="footer">
+
+        <div class="footer-top">
+            <h1><span>Food</span>Hut</h1>
+            <h4>Eat Healthy to live healthy,Live healthy to live happy</h4>
+        </div>
+        <p>&copy;2021, FoodHut, inc. All Rights Reserved.</p>
+
+    </section>
     <!-- footer section -->
 </body>
 
