--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodHut</title>
+    <link rel="shortcut icon" href="images/food.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -61,7 +62,10 @@
         </div>
         <div class="about-right">
             <h1>About Me</h1>
-            <p>I am passionate about my business. I have a great deal of knowledge about my business.Unfortunately, chances are that your competitors are saying pretty much the same things. So why should a prospect choose you? One entrepreneur and real estate broker shares her tips for creating an ‘About Me’ page that sets you apart from the competition.</p>
+            <p>I am passionate about my business. I have a great deal of knowledge about my business.Unfortunately,
+                chances are that your competitors are saying pretty much the same things. So why should a prospect
+                choose you? One entrepreneur and real estate broker shares her tips for creating an ‘About Me’ page that
+                sets you apart from the competition.</p>
 
             <a class="home-left-link" target="_blank" href="https://www.facebook.com/bestfoodpage/">Facebook Page</a>
 
@@ -77,28 +81,40 @@
 
         <div class="top">
             <h1>My Recipies</h1>
-            <p>The key to preparing those whole recipies are scoring deep cuts for quick and even cooking. All kind of tests you can feel here. </p>
+            <p>The key to preparing those whole recipies are scoring deep cuts for quick and even cooking. All kind of
+                tests you can feel here. </p>
         </div>
 
         <div class="bottom">
 
             <div class="card">
                 <img src="images/Project Cover8.png" alt="">
-                <h1 class="title">Masala Parata</h1>
-                <p>Masala paratha recipe with step by step photos. Masala paratha is spiced unleavened whole wheat flatbreads. Masala paratha... </p>
-                <h3>Price:$400</h3>
+                <div class="card-bottom">
+                    <h1 class="title">Masala Parata</h1>
+                    <p>Masala paratha recipe with step by step photos. Masala paratha is spiced unleavened whole wheat
+                        flatbreads. Masala paratha... </p>
+                    <h3>Price:$400</h3>
+                </div>
+
             </div>
             <div class="card">
                 <img src="images/Project Cover 9.jpg" alt="">
-                <h1 class="title">Mutton Kabab</h1>
-                <p>Kebabs made from minced mutton and chicken meat, slathered in a bowl of spices and grilled to perfection. Full of juice and flavor...</p>
-                <h3>Price:$320</h3>
+                <div class="card-bottom">
+                    <h1 class="title">Mutton Kabab</h1>
+                    <p>Kebabs made from minced mutton and chicken meat, slathered in a bowl of spices and grilled to
+                        perfection. Full of juice and flavor...</p>
+                    <h3>Price:$320</h3>
+                </div>
             </div>
             <div class="card">
                 <img src="images/Project Cover.png" alt="">
-                <h1 class="title">Thai Soup</h1>
-                <p>Thai soups feature incredible flavors and are ultra comforting — guaranteed to lift your spirits and brighten your mood. hese kebabs are perfect as a starter...</p>
-                <h3>Price:$280</h3>
+                <div class="card-bottom">
+                    <h1 class="title">Thai Soup</h1>
+                    <p>Thai soups feature incredible flavors and are ultra comforting — guaranteed to lift your spirits
+                        and
+                        brighten your mood. hese kebabs are perfect as a starter...</p>
+                    <h3>Price:$280</h3>
+                </div>
             </div>
         </div>
 
@@ -142,9 +158,9 @@
             <h1>Contact</h1>
             <p>Maintain your dishes from everywhere</p>
             <form action="">
-                <input type="text" placeholder="name">
-                <input type="email" placeholder="email">
-                <input type="text" placeholder="phone">
+                <input type="text" placeholder="name" required>
+                <input type="email" placeholder="email" required>
+                <input type="text" placeholder="phone" required>
                 <input class="textarea" type="text" placeholder="message...">
 
                 <a class="contact-link" href="">Submit message</a>
